[gd_scene load_steps=3 format=3 uid="uid://cvbpa2a36e5vn"]

[ext_resource type="Script" path="res://addons/hotel/EntryLabel.gd" id="1_cj45d"]
[ext_resource type="FontFile" uid="uid://b1c3fty8httvk" path="res://addons/core/assets/fonts/at01.ttf" id="2_7xxwy"]

[node name="EntryLabel" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_cj45d")

[node name="EntryName" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_7xxwy")
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="SelectButton" type="CheckBox" parent="."]
layout_mode = 2

[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
